fix sidebar colours in dark mode

--- a/static/styles/dark_theme.css
+++ b/static/styles/dark_theme.css
@@ -150,9 +150,7 @@
     .column-right .right-sidebar,
     #groups_overlay .right,
     #subscription_overlay .right,
-    #settings_page .right,
-    #streams_header,
-    .private_messages_container {
+    #settings_page .right {
         background-color: hsl(212, 28%, 18%);
     }
 
